--- a/README.rdoc
+++ b/README.rdoc
@@ -28,6 +28,7 @@ That's it. Now you're ready to change the world. Here's to making a dent in thin
 = Gotchas
 
 Make sure you install rubytree gem's older version, not just the latest: rubytree -v 0.7.0
+We're running Ruby 1.8.7 in dev and production
 
 ----
 
@@ -38,6 +39,7 @@ Platform workstream: http://bettermeans.com/projects/2/dashboard
 We are working on using bundler to wrap up the dev environment. To learn more about it check it out here: http://gembundler.com/
 
 Our tests are broken. Help us write great tests and catch up on our testing environment!
+
 
 == Dev database
 
